// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderChangelogSurface structural snapshot — error 1`] = `
<Box
  borderColor="cyan"
  borderStyle="round"
  flexDirection="column"
  flexShrink={0}
  paddingX={1}
  width={120}
>
  <Box
    justifyContent="space-between"
  >
    <Text
      bold={true}
    >
      Changelog *
    </Text>
    <Text
      dimColor={true}
    >
      error
    </Text>
  </Box>
  <Text
    color="red"
  >
    Changelog generation failed.
  </Text>
  <Text
    dimColor={true}
  >
    boom
  </Text>
  <Text
    dimColor={true}
  />
  <Text
    dimColor={true}
  >
    Press \`r\` to retry, \`&lt;\` / Esc to go back.
  </Text>
</Box>
`;

exports[`renderChangelogSurface structural snapshot — idle 1`] = `
<Box
  borderColor="cyan"
  borderStyle="round"
  flexDirection="column"
  flexShrink={0}
  paddingX={1}
  width={120}
>
  <Box
    justifyContent="space-between"
  >
    <Text
      bold={true}
    >
      Changelog *
    </Text>
    <Text
      dimColor={true}
    />
  </Box>
  <Text
    dimColor={true}
  >
    Preparing changelog…
  </Text>
</Box>
`;

exports[`renderChangelogSurface structural snapshot — loading 1`] = `
<Box
  borderColor="cyan"
  borderStyle="round"
  flexDirection="column"
  flexShrink={0}
  paddingX={1}
  width={120}
>
  <Box
    justifyContent="space-between"
  >
    <Text
      bold={true}
    >
      Changelog *
    </Text>
    <Text
      dimColor={true}
    >
      generating…
    </Text>
  </Box>
  <Text
    dimColor={true}
  >
    Generating changelog …
  </Text>
  <Text
    dimColor={true}
  />
  <Text
    dimColor={true}
  >
    Esc cancels and returns to the previous view.
  </Text>
</Box>
`;
